--- a/config/storage.yml
+++ b/config/storage.yml
@@ -10,10 +10,10 @@ local:
 
 amazon:
   service: S3
-  access_key_id: AKIAS2JP4VUD5EDRLO4D
-  secret_access_key: 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
-  region: eu-west-2
-  bucket: ubiquityhez
+  access_key_id: ENV["access_key_id"]
+  secret_access_key: ENV["secret_access_key"]
+  region: ENV["eu-west-2"]
+  bucket: ENV["bucket"]
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
